--- a/Final/style.css
+++ b/Final/style.css
@@ -1,5 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@700&family=Montserrat:wght@300&family=Wix+Madefor+Display&display=swap');
+
+
 body{
    background-color: rgb(226, 226, 226);
+}
+p{
+    font-family:'Wix Made for Display',
+}
+h1,h2,h3,h4,h5,h6{
+    font-family: 'Lato', sans-serif;
 }
 
 .post{
@@ -24,7 +33,7 @@ body{
     margin:10px;
 }
 .comment{
-     background-color: rgb(228, 228, 228);
+     background-color: rgb(207, 207, 207);
      padding: 10px;
      margin-left:-7px;
      margin-right: -7px;
@@ -37,15 +46,10 @@ body{
     border: 2px solid grey;
     margin:5px;
 } 
-.editContainer{
-    display:flex;
-    flex-flow:row nowrap;
-    justify-content: right; 
-    padding:2px;
-    top:0;
-
-}.editContainer a{
+.editContainer {
     margin:5px;
+    color:rgb(133, 141, 141);
+    text-decoration: none; 
 }
 .user{
     padding:-10px;
@@ -59,14 +63,18 @@ body{
 }
 
 #displayName{
-    width: 80px;
-    height:30px;
+    width: 100px;
+    height:50px;
 }
 #comment{
-    width:1000px;
-    height:30px;
+    width:1100px;
+    height:50px;
 }
 #submit{
-    height:30px;
-    width:70px;
+    height:50px;
+    width:100px;
+}
+.displayedUser{
+    margin:0;
+    margin-top:5px;
 }
